fixed: hide note when network visible fixed: network height changed: escape to hide network fixed: do not save if not needed

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body::-webkit-scrollbar-thumb {
 	position: absolute;
 	top:  0;
 	width: 100%;
-	height: 600px;
+	height: 100%;
 	opacity: 1;
 }
 
